@@ -1,10 +1,10 @@
 [comment {-*- tcl -*- doctools manpage}]
-[manpage_begin snit n 0.97]
+[manpage_begin snit n 0.98]
 [copyright {2003-2004, by William H. Duquette}]
-[moddesc {Simple Now In Tcl, OO system}]
-[titledesc  {Simple Now In Tcl}]
+[moddesc {Snit's Not Incr Tcl, OO system}]
+[titledesc  {Snit's Not Incr Tcl}]
 [require Tcl 8.4]
-[require snit [opt 0.97]]
+[require snit [opt 0.98]]
 [description]
 [para]
 
