@@ -1,7 +1,7 @@
 [comment {-*- tcl -*- doctools manpage}]
-[manpage_begin snitfaq n 0.97]
+[manpage_begin snitfaq n 0.98]
 [copyright {2003-2004, by William H. Duquette}]
-[moddesc {Simple Now In Tcl, OO system}]
+[moddesc {Snit's Not Incr Tcl, OO system}]
 [titledesc   {Snit Frequently Asked Questions}]
 [description]
 [para]
